fix: Fix invisible hover & incorrect padding for img upload

--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -4,7 +4,7 @@
  * Created Date: 2025-09-08 16:08:20
  * Author: 3urobeat
  *
- * Last Modified: 2025-09-20 19:35:47
+ * Last Modified: 2025-12-06 19:42:49
  * Modified By: 3urobeat
  *
  * Copyright (c) 2025 3urobeat <https://github.com/3urobeat>
@@ -29,8 +29,8 @@
     --color-bg-input-light: #e8e9eb;
     --color-bg-input-dark: #202224;
 
-    --color-bg-field-hover-light: #edeef0;
-    --color-bg-field-hover-dark: #25282a;
+    --color-bg-field-hover-light: #e2e3e5;
+    --color-bg-field-hover-dark: #242628;
     --color-bg-field-light: #f2f3f4;
     --color-bg-field-dark: #2a2d2f;
 
